# actix-wasm-example

./: Cargo.toml  readme.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/crate/: Cargo.toml
frontend/crate/src/: lib.rs
frontend/src/: index.tsx
frontend/src/components/: App.tsx
