[package]
name = "backend"
version = "0.1.0"
authors = ["Nathan Glimsdale <nglimsdale@gmail.com>"]
edition = "2018"

[features]
default = []
data = []

[dependencies]
actix-web = { version = "0.7", optional = true}
log = { version = "0.4.0", optional = true}
env_logger = { version = "0.6.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["actix-web", "log", "env_logger"]
