[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
license = "Apache-2.0/MIT"
name = "rust-webpack"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.20"
wasm-bindgen = { version = "0.2.42", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.3.19"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
js-sys = "0.3"
backend = { path = "../../backend"}

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

